terminando o site formato web

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
         font-size: 48px;
         color: #454545;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        position: fixed;
     }
     h2{
         font-weight: 600;
@@ -25,12 +26,15 @@ body{
         width: 513px;
         height: 30px;
         background: #CBB7A1;
+        
     }
     h3{
         font-weight: normal;
         font-size: 18px;
         color: #454545;
         text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        position: fixed;
+        margin-top: 60px;
     }
     #main-doc{
         display: flex;
@@ -38,8 +42,8 @@ body{
 
     }
     #cabecalho{
-        width: 319px;
-        height: 1740px;;
+        min-width: 319px;
+        height: 2100px;;
         background: #F2EBE2;
         padding: 25px;
     }
@@ -51,7 +55,10 @@ body{
         text-align: center;
         color: #CEC1B2;
         list-style: none;
-        margin-top: 70px;
+        margin:  70px 30px;
+    }
+    #navbar{
+        position: fixed;
     }
     a{
         text-decoration: none;
@@ -86,5 +93,8 @@ body{
         color: #CBB7A1;
         margin-left: 20px;
         margin-top: 60px;
+    }
+    li#paises{
+        margin:  0px;
     }
 }
